Overflow problem solved

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -34,6 +34,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar {
    background: rgba(0, 0, 0, 0);
    width: 10px;
+   height: 0px;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -43,6 +44,11 @@ body::-webkit-scrollbar-thumb {
 body::-webkit-scrollbar-thumb:hover {
    background: $greenDark;
 }
+
+body::-webkit-scrollbar-thumb:horizontal {
+   background: $greenDarkDepth;
+}
+
 
 @font-face {
    font-family: $fontTitleName;
@@ -60,9 +66,6 @@ body {
    scroll-behavior: smooth !important;
 }
 
-html, body {
-   overflow-x: hidden !important;
-}
 
 h1,
 h2,
@@ -249,13 +252,6 @@ button:focus {
    margin: auto;
 }
 
-.navbar > .container {
-   display: flex;
-}
-
-.cont-navbar {
-   justify-self: flex-end;
-}
 
 .navbar-nav {
    a {
@@ -387,7 +383,28 @@ button:focus {
    justify-content: center;
    align-items: center;
    font-size: 24px;
-   z-index: 101;
+
+   .fa-bars {
+      animation: flipBars 0.2s ease forwards;
+   }
+
+   .fa-times {
+      animation: flipTimes 0.2s ease forwards;
+   }
+}
+
+.btnMenuClose {
+   color: $greenText;
+   padding: 0 !important;
+   position: relative;
+   width: 40px !important;
+   height: 40px !important;
+   border-radius: 20px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 24px;
+   margin: 9px 16px 0px 0px;
 
    .fa-bars {
       animation: flipBars 0.2s ease forwards;
@@ -408,7 +425,6 @@ button:focus {
 .navbar-top-hidden {
    top: -50% !important;
    transition: 0.4s ease;
-
 }
 
 
@@ -838,9 +854,15 @@ button:focus {
    font-weight: bold;
 }
 
+.cont-menu-products {
+   max-width: 100% !important;
+}
+
 .cont-menus-card {
    display: flex;
    flex-wrap: wrap;
+   width: 0px !important;
+   height: 0px !important;
    opacity: 0;
    transition: 0.4s;
    animation: hideMenuItems 0.4s ease forwards;
@@ -849,6 +871,7 @@ button:focus {
 .cont-products-card {
    display: flex;
    flex-wrap: wrap;
+   height: 0px !important;
    animation: hideProducts 0.4s ease forwards;
 }
 
@@ -867,9 +890,11 @@ button:focus {
 }
 
 .hideProducts {
-   display: flex;
-   flex-wrap: wrap;
-   animation: hideProducts 0.4s ease forwards;
+   animation: hideProducts 0.4s ease;
+   div {
+      display: none;
+      animation: hideProductsContent 0.4s ease;
+   }
 }
 
 #point-contact-1 {
@@ -970,10 +995,12 @@ button:focus {
 
 @keyframes showMenuItems {
    from {
+      opacity: 0;
       margin-left: -50%;
    }
 
    to {
+      opacity: 1;
       margin-left: 0%;
    }
 }
@@ -981,14 +1008,14 @@ button:focus {
 @keyframes hideMenuItems {
    from {
       opacity: 1;
-      width: 0px;
-      height: 0px;
       margin-left: 0%;
    }
 
    to {
       opacity: 0;
       margin-left: -100%;
+      width: 0px;
+      height: 0px;
    }
 }
 
@@ -1006,13 +1033,23 @@ button:focus {
 
 @keyframes hideProducts {
    from {
-      opacity: 1;
       margin-right: 0%;
    }
-
    to {
       opacity: 0;
       margin-right: -100%;
+      overflow-x: hidden;
+      pointer-events: none;
+   }
+}
+
+@keyframes hideProductsContent {
+   from {
+      display: flex;
+   }
+
+   to {
+      display: none;
    }
 }
 
@@ -1270,9 +1307,7 @@ button:focus {
 }
 
 @media screen and (max-width: 993px) {
-   body {
-      overflow-y: hidden !important;
-   }
+   
    .cont-menus-card {
       height: 0px !important;
       animation: hideMenuItems 0.4s ease forwards;
@@ -1285,8 +1320,8 @@ button:focus {
    .showNavBar {
       width: 100%;
       height: 100vh;
-      position: absolute;
-      top: 0;
+      position: fixed;
+      top: 0%;
       right: 0%;
       transition: clip-path .8s ease;
       clip-path: circle(200% at top right);
